@@ -18,6 +18,38 @@ a{outline:none}
 
 /* Misc  */
 
+.pagination {
+clear:both;
+padding:2px 0;
+position:relative;
+font-size:11px;
+line-height:13px;
+margin-bottom: 38px;
+}
+
+.pagination span, .pagination a {
+display:block;
+float:left;
+margin: 2px 2px 2px 0;
+padding:6px 9px 5px 9px;
+text-decoration:none;
+width:auto;
+color:#fff;
+background: #555;
+}
+
+.pagination a:hover{
+color:#fff;
+background: #3279BB;
+}
+
+.pagination .current{
+padding:6px 9px 5px 9px;
+background: #3279BB;
+color:#fff;
+}
+
+
 #register {text-align: right; list-style: none;}
 
 #register li {float: right; display: block; padding-left: 5px;}
