@@ -8,6 +8,8 @@ Version 4.0.5 (02-23-12)
 -Responsive design adjustments.
 -Added missing translation wrapper to Tags: text. 
 -Added a few IE related CSS fixes.
+-Removed archive title and search result text from templates.
+-Improved post index pagination.
 
 Version 4.0.4 (02-17-12)
 -Adjustment to Foundation JS calls to fix further plugin conflicts.
